<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5B3B3"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_add_company"
            card_view:cardCornerRadius="4dp"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="#E1DEDE"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            card_view:cardElevation="1dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/photo"
                    android:background="#B3AFAF"
                    android:layout_gravity="center"
                    android:src="@drawable/noimg"
                    android:layout_margin="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="-30dp"
                    android:text="ADD PHOTO"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <!-- TODO: Update blank fragment layout -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="Product Name"
                            android:id="@+id/productName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="Price (NRS)"
                            android:id="@+id/price"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="Brand"
                            android:id="@+id/brand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="Description"
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:hint="Available Quantity"
                            android:id="@+id/qty"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#AE4E4E"
                        android:text="***Note minimum required quantity for stock is 5."/>

                    <Button
                        android:id="@+id/btn_add"
                        android:text="Add"
                        android:layout_marginTop="10dp"
                        android:background="#3FA0D1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>