...
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_view_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!--        New Order Layout-->
        <LinearLayout
...
