<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearLayout"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="9dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:background="#1D95B3"
                android:id="@+id/LayoutOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="29dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgView"
                android:layout_below="@+id/LayoutOne"
                android:src="@drawable/wifi"
                android:layout_marginTop="-7dp"
                android:layout_centerHorizontal="true"/>
            <ScrollView
                android:id="@+id/layoutTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgView"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--  Name Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/et_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAllCaps="false"
                            android:hint="@string/first_name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText
                            android:id="@+id/et_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAllCaps="false"
                            android:hint="@string/last_name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/layoutSelectGender"
                        android:text="@string/select_gender"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"/>
                    <RadioGroup
                        android:id="@+id/layoutGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="#808080"
                        android:orientation="horizontal">
                        <RadioButton
                            android:text="@string/male"
                            android:id="@+id/rd_male"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:text="@string/female"
                            android:id="@+id/rd_female"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:text="@string/others"
                            android:id="@+id/rd_others"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/email" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/password" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Signup Button -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:shadowRadius="1"
                        android:background="#1D95B3"
                        android:layout_marginBottom="10dp"
                        android:text="Create Account"/>

                    <TextView android:id="@+id/login_link"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/already_a_member_login"
                        android:gravity="center"
                        android:textColor="#05277E"
                        android:textSize="16sp"/>
                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>





</RelativeLayout>